[package]
name = "chunklands-rs"
version = "0.1.0"
authors = ["Philipp Renoth <renoth@aitch.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = {version = "0.41", features = ["vulkan"]}
vk-sys = "0.5.3"
log = "0.4"
env_logger = "0.8"
inline-spirv = "0.1"
vulkanic = {path = "./vulkanic-rs"}
glm = "0.2"
memoffset = "0.6.3"
